src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>买家</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>订单</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfOLI__c</fullName>
        <label>订单项数量</label>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfReceivedOLI__c</fullName>
        <label>已收货订单项数量</label>
        <summaryFilterItems>
            <field>OrderLineItem__c.Status__c</field>
            <operation>equals</operation>
            <value>已收货</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Color__c</fullName>
        <formula>IF( ISPICKVAL(Status__c,&quot;Unfulfilled&quot;), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 50),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 50))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>颜色</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状态</label>
        <picklist>
            <picklistValues>
                <fullName>Unfulfilled</fullName>
                <color>#FF6600</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled</fullName>
                <color>#3366FF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost_RMB__c</fullName>
        <label>订单成本总额(￥)</label>
        <summarizedField>OrderLineItem__c.Cost_RMB__c</summarizedField>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price_RMB__c</fullName>
        <label>订单价格总额(￥)</label>
        <summarizedField>OrderLineItem__c.Price_RMB__c</summarizedField>
        <summaryForeignKey>OrderLineItem__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Total_Price_RMB__c</columns>
        <columns>Total_Cost_RMB__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Color__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>订单编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>